# work-trial-benchmark

./: .env.example  .gitignore  BENCHMARK_PLAN.md  README.md  pyproject.toml
scripts/: build_subset.py  download_data.py  finalize_runs.py  run_nebula.py  run_topk.py  run_topk_ttc.py
src/harness/: chunker.py  data.py  embedder.py  eval.py  pipeline.py  reader.py  runner_common.py  runner_nebula.py  runner_topk.py  runner_topk_ttc.py  settings.py  sweep_common.py  sweep_nebula.py  sweep_topk.py  sweep_topk_ttc.py  tasks.py
src/harness/compressors/: base.py  identity.py  ttc.py
src/harness/retrievers/: base.py  nebula.py  topk_ttc.py
